
    Added Sub-Skill named Multi Tasking to Tridents
    Added Sub-Skill named Cone of Death to Crossbows

    (These permissions are all included in the mcmmo.defaults node)
    New permission node 'mcmmo.commands.tridents'
    New permission node 'mcmmo.skills.tridents'
    New permission node 'mcmmo.ability.tridents.all'
    New permission node 'mcmmo.ability.tridents.multitasking'
    New permission node 'mcmmo.commands.crossbows'
    New permission node 'mcmmo.skills.crossbows'
    New permission node 'mcmmo.ability.crossbows.all'

    Added new locale string 'Overhaul.Name.Tridents'
    Added new locale string 'Overhaul.Name.Crossbows'

    Added XP bar settings for Tridents & Crossbows to experience.yml
    Changed some debug level logging to info level for convenience
    XP Bar settings (set by /mmoxpbar command) are now saved per player

    Notes:
    These are the first new skills that I've written for mcMMO in about 9 years, I'll be listening closely to feedback and tweaking them often.

Version 2.1.132
    A fix is in place to prevent an exploit from working that is due to a yet to be patched Spigot server software bug
    Fixed a NPE that could happen when players swapped items from their hotbar

    NOTE: The exploit was not described on purpose, please update.
    I reported the bug to Spigot, so hopefully it will be patched in the near future.

Version 2.1.131

    New permission node 'mcmmo.ability.repair.netheriterepair' which is included in the mcmmo.defaults permission package
    New permission node 'mcmmo.ability.salvage.netheritesalvage' which is included in the mcmmo.defaults permission package
    Changed Salvage maximum quantity values to 4 for all Netherite armor
    mcMMO will set the default salvage quantities for netherite armor to 4 once and then never again (see notes)

    Added Basalt to Bonus Drops for Mining in config.yml (see notes)
    Added Polished Basalt to Bonus Drops for Mining in config.yml (see notes)