@@ -552,6 +552,15 @@ Woodcutting.Skills.TreeFeller.Other.Off=Tree Feller[[GREEN]] has worn off for [[
 Woodcutting.Skills.TreeFeller.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Tree Feller!
 Woodcutting.Skills.TreeFeller.Splinter=YOUR AXE SPLINTERS INTO DOZENS OF PIECES!
 Woodcutting.Skills.TreeFeller.Threshold=That tree is too large!
+#TRIDENTS
+Tridents.SubSkill.TridentsLimitBreak.Name=Tridents Limit Break
+Tridents.SubSkill.TridentsLimitBreak.Description=Breaking your limits. Increased damage against tough opponents. Intended for PVP, up to server settings for whether or not it will boost damage in PVE.
+Tridents.SubSkill.TridentsLimitBreak.Stat=Limit Break Max DMG
+#CROSSBOWS
+Crossbows.SubSkill.CrossbowsLimitBreak.Name=Crossbows Limit Break
+Crossbows.SubSkill.CrossbowsLimitBreak.Description=Breaking your limits. Increased damage against tough opponents. Intended for PVP, up to server settings for whether or not it will boost damage in PVE.
+Crossbows.SubSkill.CrossbowsLimitBreak.Stat=Limit Break Max DMG
+
 #ABILITIY
 
 #COMBAT
