@@ -558,8 +558,7 @@ Unarmed:
             Rank_2: 250
             Rank_3: 500
             Rank_4: 750
-            Rank_5: 1000
-
+            Rank_5: 1000lo
 Woodcutting:
     Splinter:
         Standard:
@@ -671,6 +670,29 @@ Repair:
             Rank_7: 850
             Rank_8: 1000
 Tridents:
+    TridentsLimitBreak:
+        Standard:
+            Rank_1: 10
+            Rank_2: 20
+            Rank_3: 30
+            Rank_4: 40
+            Rank_5: 50
+            Rank_6: 60
+            Rank_7: 70
+            Rank_8: 80
+            Rank_9: 90
+            Rank_10: 100
+        RetroMode:
+            Rank_1: 100
+            Rank_2: 200
+            Rank_3: 300
+            Rank_4: 400
+            Rank_5: 500
+            Rank_6: 600
+            Rank_7: 700
+            Rank_8: 800
+            Rank_9: 900
+            Rank_10: 1000
     MultiTasking:
         Standard:
             Rank_1: 5
@@ -685,6 +707,29 @@ Tridents:
             Rank_4: 600
             Rank_5: 1000
 Crossbows:
+    CrossbowsLimitBreak:
+        Standard:
+            Rank_1: 10
+            Rank_2: 20
+            Rank_3: 30
+            Rank_4: 40
+            Rank_5: 50
+            Rank_6: 60
+            Rank_7: 70
+            Rank_8: 80
+            Rank_9: 90
+            Rank_10: 100
+        RetroMode:
+            Rank_1: 100
+            Rank_2: 200
+            Rank_3: 300
+            Rank_4: 400
+            Rank_5: 500
+            Rank_6: 600
+            Rank_7: 700
+            Rank_8: 800
+            Rank_9: 900
+            Rank_10: 1000
     ConeOfDeath:
         Standard:
             Rank_1: 10
